--- a/templates/categories.html
+++ b/templates/categories.html
@@ -3,13 +3,16 @@
 
 <h1>Categories</h1>
 
+<a href = '{{ url_for('newCategory') }}'>Create new catagory</a>
+<br>
+
 {% if categories %}
     {% for category in categories %}
-    {{ category.name }}
+    <a href = '{{ url_for('showItems', category_id=category.id)}}'>{{ category.name }}</a>
     <br>
-    <a href = '#'>Edit</a>
+    <a href = '{{ url_for('editCategory', category_id=category.id) }}'>Edit</a>
     <br>
-    <a href = '#'>Delete</a>
+    <a href = '{{ url_for('deleteCategory', category_id=category.id) }}'>Delete</a>
     <br>
     <br>
     {% endfor %}
