--- a/templates/delete-item.html
+++ b/templates/delete-item.html
@@ -3,11 +3,11 @@
 
 <h1>Are you sure you wish to delete {{ item.name }}?</h1>
 
-<form action='#' method = 'post'>
+<form action='{{ url_for('deleteItem', category_id=item.category_id, item_id=item.id) }}' method = 'post'>
 <input type='submit', value = 'Delete'>
 </form>
 
-<a href = '#'>Cancel</a>
+<a href = '{{ url_for('showItems', category_id=item.category_id) }}'>Cancel</a>
 
 </body>
 </html>
