--- a/templates/edit-category.html
+++ b/templates/edit-category.html
@@ -3,11 +3,11 @@
 
 <h1>Edit Category</h1>
 
-<form action='#' method='post'>
+<form action='{{ url_for('editCategory', category_id=category.id) }}' method='post'>
     <p>Name:</p>
     <input type = 'text' size='30' name='name' placeholder='{{ category.name}}'>
     <input type = 'submit' value='Edit'>
-    <a href = '#'>Cancel</a>
+    <a href = '{{ url_for('showCatagories') }}'>Cancel</a>
 </form>
 
 </body>
