--- a/templates/items.html
+++ b/templates/items.html
@@ -3,15 +3,21 @@
 
 <h1>Items</h1>
 
+<a href = '{{ url_for('newItem', category_id=category_id) }}'>Create new item</a>
+<br>
+
 {% if items %}
     {% for item in items %}
     {{ item.name }}
     <br>
-    <a href = '#'>Edit</a>
+    <a href = '{{ url_for('editItem', category_id=item.category.id, item_id=item.id) }}'>Edit</a>
     <br>
-    <a href = '#'>Delete</a>
+    <a href = '{{ url_for('deleteItem', category_id=item.category.id, item_id=item.id) }}'>Delete</a>
     <br>
     <br>
+
+    <img src="{{ item.picture }}"/>
+
     {% endfor %}
 {% else %}
     <h3>No items found!</h3>
