--- a/templates/new-category.html
+++ b/templates/new-category.html
@@ -3,11 +3,11 @@
 
 <h1>New Category</h1>
 
-<form action='#' method='post'>
+<form action='{{ url_for('newCategory') }}' method='post'>
     <p>Name:</p>
     <input type = 'text' size='30' name='name'>
     <input type = 'submit' value='Create'>
-    <a href = '#'>Cancel</a>
+    <a href = '{{ url_for('showCatagories') }}'>Cancel</a>
 </form>
 
 </body>
