--- a/templates/edit-category.html
+++ b/templates/edit-category.html
@@ -1,15 +1,23 @@
-<html>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
-<h1>Edit Category</h1>
+    <div class="row category-top">
+        <div class="col-md-11 text-left">
+            <h2>Edit Category <i>{{ category.name }}</i></h2>
+        </div>
+        <div class="col-md-1 text-right">
+            <a href = '{{ url_for('showCatagories') }}'>
+            <img src='/static/images/arrow-boxed-flat.png' alt='Back Arrow'></a>
+        </div>
+    </div>
 
-<form action='{{ url_for('editCategory', category_id=category.id) }}' method='post'>
-    <p>Name:</p>
-    <input type = 'text' size='30' name='name' placeholder='{{ category.name}}'>
-    <input type = 'submit' value='Edit'>
-    <input name=_csrf_token type=hidden value="{{ csrf_token }}">
-    <a href = '{{ url_for('showCatagories') }}'>Cancel</a>
-</form>
+    <form action='{{ url_for('editCategory', category_id=category.id) }}' method='post'>
+        <p>Name:
+        <input type = 'text' size='30' name='name' placeholder='{{ category.name}}'>
+        </p>
+        <br>
+        <input type='submit' value='Save'>
+        <input name=_csrf_token type=hidden value="{{ csrf_token }}">
+    </form>
 
-</body>
-</html>
+{% endblock %}
