--- a/templates/items.html
+++ b/templates/items.html
@@ -1,30 +1,30 @@
-<html>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
-<h1>Items</h1>
+    <h1>{{ category.name }} Items</h1>
+    <a href="{{ url_for('showCatagories') }}"> Back </a>
 
-{% if category.user_id == loggedin_user_id %}
-<a href = '{{ url_for('newItem', category_id=category_id) }}'>Create new item</a>
-{% endif %}
-<br>
-
-{% if items %}
-    {% for item in items %}
-    {{ item.name }}
-    {% if item.user_id == loggedin_user_id %}
-    <br>
-    <a href = '{{ url_for('editItem', category_id=item.category.id, item_id=item.id) }}'>Edit</a>
-    <br>
-    <a href = '{{ url_for('deleteItem', category_id=item.category.id, item_id=item.id) }}'>Delete</a>
-    <br>
-    <br>
+    {% if category.user_id == loggedin_user_id %}
+        <a href = '{{ url_for('newItem', category_id=category_id) }}'>Create new item</a>
     {% endif %}
-    <img src="{{ item.picture }}"/>
+    <br>
 
-    {% endfor %}
-{% else %}
-    <h3>No items found!</h3>
-{% endif %}
+    {% if items %}
+        {% for item in items %}
+        {{ item.name }}
+        {% if item.user_id == loggedin_user_id %}
+        <br>
+        <a href = '{{ url_for('editItem', category_id=item.category.id, item_id=item.id) }}'>Edit</a>
+        <br>
+        <a href = '{{ url_for('deleteItem', category_id=item.category.id, item_id=item.id) }}'>Delete</a>
+        <br>
+        <br>
+        {% endif %}
+        <img src="{{ item.picture }}"/>
 
-</body>
-</html>
+        {% endfor %}
+    {% else %}
+        <h3>No items found!</h3>
+    {% endif %}
+
+{% endblock %}
