--- a/templates/base.html
+++ b/templates/base.html
@@ -23,14 +23,22 @@
                   {%if 'username' not in session %}
                         <a href="{{url_for('showLogin')}}"><h4>Login</h4></a>
                     {% else %}
-                        <a href="{{url_for('signout')}}"><h4>Logout</h4></a>
+                        Hello, {{ session['email'] }} <a href="{{url_for('signout')}}"><h4>Logout</h4></a>
                    {% endif %}
                 </div>
             </header>
           </div>
           <div class="row">
-            <div class="col-md-12">
-            <hr>
+            <div class="col-md-12 messages">
+              {% with messages = get_flashed_messages() %}
+              {% if messages %}
+
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+
+                {% endif %}
+              {% endwith %}
             </div>
           </div>
           <div class="row">
