--- a/templates/delete-item.html
+++ b/templates/delete-item.html
@@ -1,13 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h1>Are you sure you wish to delete {{ item.name }}?</h1>
+    <div class="row item-top">
+        <div class="col-md-11 text-left">
+            <h2>Are you sure you wish to delete <i>{{ item.name }}</i>?</h2>
+        </div>
+        <div class="col-md-1 text-right">
+            <a href = '{{ url_for('showItems', category_id=item.category_id) }}'>
+            <img src='/static/images/arrow-boxed-flat.png' alt='Back Arrow'></a>
+        </div>
+    </div>
 
     <form action='{{ url_for('deleteItem', category_id=item.category_id, item_id=item.id) }}' method = 'post'>
-    <input name=_csrf_token type=hidden value="{{ csrf_token }}">
+    <br>
     <input type='submit', value = 'Delete'>
+    <input name=_csrf_token type=hidden value="{{ csrf_token }}">
     </form>
-
-    <a href = '{{ url_for('showItems', category_id=item.category_id) }}'>Cancel</a>
 
 {% endblock %}
