--- a/templates/new-item.html
+++ b/templates/new-item.html
@@ -1,18 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h1>New Item</h1>
+    <div class="row item-top">
+        <div class="col-md-6 text-left">
+            <h2>New Item for <i>{{ category.name }}</i></h2>
+        </div>
+        <div class="col-md-6 text-right">
+            <a href = '{{ url_for('showItems', category_id=category.id) }}'>
+            <img src='/static/images/arrow-boxed-flat.png' alt='Back Arrow'></a>
+        </div>
+    </div>
 
     <form action='{{ url_for('newItem', category_id=category.id) }}' method='post'>
-        <p>Name:</p>
+        <p>Name:
         <input type = 'text' size='30' name='name'>
+        </p>
         <p>Description:</p>
-        <input type = 'text' size='30' name='description'>
-        <p>Picture:</p>
-        <input type='file' name='picture' accept='image/*'>
+        <textarea name="description" rows="10" cols="70"></textarea>
         <input name=_csrf_token type=hidden value="{{ csrf_token }}">
+        <br><br>
         <input type = 'submit' value='Create'>
-        <a href = '{{ url_for('showItems', category_id=category.id) }}'>Cancel</a>
     </form>
 
 {% endblock %}
